fix(Menu): Long menu item alignment is off
Fixes INSTUI-794

Test plan:
- Create a popover menu or use the example in instui
- Add several menu items to a MenuItemGroup that have a enough text to wrap onto 2 or more lines
- Ensure the left edge of all the menu items in the MenuItemGroup align, regardless of which item is selected

Reviewed-on: https://gerrit.instructure.com/131641
Tested-by: Jenkins
Product-Review: Pam Hiett <phiett@instructure.com>
QA-Review: Dan Sasaki <dsasaki@instructure.com>

--- a/packages/ui-core/src/components/Menu/MenuItem/styles.css
+++ b/packages/ui-core/src/components/Menu/MenuItem/styles.css
@@ -71,6 +71,7 @@
   color: var(--iconColor);
   margin-inline-end: var(--iconMarginEnd);
   margin-inline-start: 0;
+  min-width: 1em;
   width: 1em;
   height: 1em;
 }
